--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/2022-ColLomic.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
